--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :post_id %>
-    <%= form.number_field :post_id, id: :comment_post_id %>
+    <%= form.text_field :post_id, id: :comment_post_id, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :body %>
-    <%= form.text_area :body, id: :comment_body %>
+    <%= form.text_area :body, id: :comment_body, class: 'form-control', rows: 15 %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'Post', class: 'btn btn-primary' %>
   </div>
 <% end %>
