--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,30 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%= render 'shared/header' %>
+
+    <div class="blog-header text-center">
+      <div class="container">
+        <h1 class="blog-title">Whalitt</h1>
+        <p class="lead blog-description">Any posts not about whales will be deleted</p>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 blog-main">
+          <div class="blog-post">
+            <h2 class="blog-post-title">This would work...</h2>
+            <p class="blog-post-meta"><%= Date.today %> by <a href="#">WhaleHunters</a></p>
+
+            
+
+          <nav class="blog-pagination">
+            <a class="btn btn-outline-primary" href="#">Older</a>
+            <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
+          </nav>
+
+        </div><!-- /.blog-main -->
+
+      </div><!-- /.row -->
+
+    </div><!-- /.container -->
+
+<%= render 'shared/footer' %>
